--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
-<h1>Hello world!</h1>
+<h1>local repo!</h1>
 <p>This is the first file in my new Git Repo.</p>
 
 </body>
